--- a/CSharp/Editor/App.xaml
+++ b/CSharp/Editor/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="Editor.App"
+﻿<Application x:Class="Egametang.App"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:vm="clr-namespace:Editor.ViewModel"
+		xmlns:vm="clr-namespace:Egametang"
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		StartupUri="MainWindow.xaml"
