--- a/CSharp/GameEditor/MainWindow.xaml
+++ b/CSharp/GameEditor/MainWindow.xaml
@@ -2,16 +2,36 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="800" Width="1280">
-	<StackPanel Name="stackPanel1">
-		<Menu Height="23" Name="menu1" />
-		<Grid Name="grid1" Height="738" Width="Auto">
+	
+	<Window.CommandBindings>
+		<CommandBinding Command="ApplicationCommands.New" CanExecute="NewCanExecute" Executed="OnNewNode" />
+		<CommandBinding Command="ApplicationCommands.Delete" CanExecute="DeleteCanExecute" Executed="OnDeleteNode" />
+	</Window.CommandBindings>
+	
+	<Window.Resources>
+		<ContextMenu x:Key="NodeMenu" Name="behaviorNodeMenu">
+			<MenuItem Header="New" Command="ApplicationCommands.New" />
+			<MenuItem Header="Delete" Command="ApplicationCommands.Delete" />
+		</ContextMenu>
+	</Window.Resources>
+	
+	<StackPanel>
+		<Menu Height="23" >
+			<MenuItem Header="_File">
+				<MenuItem Header="New" Command="ApplicationCommands.New" />
+				<MenuItem Header="Delete" Command="ApplicationCommands.Delete" />
+			</MenuItem>
+		</Menu>
+		<Grid Height="738" Width="Auto">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="132*" />
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition Width="1092*" />
 			</Grid.ColumnDefinitions>
-			<ListBox HorizontalAlignment="Stretch" Margin="0" Name="listBox1" VerticalAlignment="Stretch" />
-			<GridSplitter Grid.Column="1" HorizontalAlignment="Center" Margin="0" Name="gridSplitter1" VerticalAlignment="Stretch" Width="5" />
+			<GridSplitter Grid.Column="1" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Stretch" Width="5" />
+			<TreeView HorizontalAlignment="Stretch" Margin="0" Name="behaviorTreeView" 
+					VerticalAlignment="Stretch" MouseRightButtonUp="behaviorTreeView_MouseRightButtonUp" 
+					Padding="0" BorderThickness="0" ContextMenu="{StaticResource NodeMenu}"/>
 		</Grid>
 	</StackPanel>
 </Window>
