--- a/CSharp/GameEditor/MainWindow.xaml
+++ b/CSharp/GameEditor/MainWindow.xaml
@@ -2,36 +2,32 @@
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		Title="MainWindow" Height="800" Width="1280">
-	
-	<Window.CommandBindings>
-		<CommandBinding Command="ApplicationCommands.New" CanExecute="NewCanExecute" Executed="OnNewNode" />
-		<CommandBinding Command="ApplicationCommands.Delete" CanExecute="DeleteCanExecute" Executed="OnDeleteNode" />
-	</Window.CommandBindings>
-	
-	<Window.Resources>
-		<ContextMenu x:Key="NodeMenu" Name="behaviorNodeMenu">
-			<MenuItem Header="New" Command="ApplicationCommands.New" />
-			<MenuItem Header="Delete" Command="ApplicationCommands.Delete" />
-		</ContextMenu>
-	</Window.Resources>
-	
 	<StackPanel>
-		<Menu Height="23" >
-			<MenuItem Header="_File">
-				<MenuItem Header="New" Command="ApplicationCommands.New" />
-				<MenuItem Header="Delete" Command="ApplicationCommands.Delete" />
+		<Menu>
+			<MenuItem Height="24">
 			</MenuItem>
 		</Menu>
 		<Grid Height="738" Width="Auto">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition Width="132*" />
+				<ColumnDefinition Width="150" />
 				<ColumnDefinition Width="Auto" />
-				<ColumnDefinition Width="1092*" />
-			</Grid.ColumnDefinitions>
-			<GridSplitter Grid.Column="1" HorizontalAlignment="Center" Margin="0" VerticalAlignment="Stretch" Width="5" />
-			<TreeView HorizontalAlignment="Stretch" Margin="0" Name="behaviorTreeView" 
-					VerticalAlignment="Stretch" MouseRightButtonUp="behaviorTreeView_MouseRightButtonUp" 
-					Padding="0" BorderThickness="0" ContextMenu="{StaticResource NodeMenu}"/>
-		</Grid>
+				<ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="441*" />
+            </Grid.ColumnDefinitions>
+			<TreeView Grid.Column="0"  HorizontalAlignment="Stretch" Name="behaviorTreeView" 
+					VerticalAlignment="Stretch" Padding="0" BorderThickness="0" 
+					ContextMenuOpening="behaviorTreeView_ContextMenuOpening">
+				<TreeView.ContextMenu>
+					<ContextMenu>
+						<MenuItem Name="newMenuItem"  Header="New" Click="newMenuItem_Click" />
+                        <MenuItem Name="copyMenuItem" Header="Copy" Click="copyMenuItem_Click" />
+                        <MenuItem Name="pasteMenuItem"  Header="Paste" Click="pasteMenuItem_Click" />
+						<MenuItem Name="delMenuItem"  Header="Delete" Click="delMenuItem_Click" />
+					</ContextMenu>
+				</TreeView.ContextMenu>
+			</TreeView>
+			<GridSplitter Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="5" />
+			<Canvas />
+        </Grid>
 	</StackPanel>
 </Window>
