--- a/CSharp/GameEditor/MainWindow.xaml
+++ b/CSharp/GameEditor/MainWindow.xaml
@@ -2,32 +2,37 @@
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		Title="MainWindow" Height="800" Width="1280">
-	<StackPanel>
-		<Menu>
-			<MenuItem Height="24">
-			</MenuItem>
-		</Menu>
-		<Grid Height="738" Width="Auto">
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="*"/>
+		</Grid.RowDefinitions>
+		<Grid Grid.Row="0">
+			<Menu>
+				<MenuItem Height="24">
+				</MenuItem>
+			</Menu>
+		</Grid>
+		<Grid Grid.Row="1">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="150" />
 				<ColumnDefinition Width="Auto" />
-				<ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="441*" />
-            </Grid.ColumnDefinitions>
+				<ColumnDefinition Width="*" />
+			</Grid.ColumnDefinitions>
 			<TreeView Grid.Column="0"  HorizontalAlignment="Stretch" Name="behaviorTreeView" 
 					VerticalAlignment="Stretch" Padding="0" BorderThickness="0" 
 					ContextMenuOpening="behaviorTreeView_ContextMenuOpening">
 				<TreeView.ContextMenu>
 					<ContextMenu>
 						<MenuItem Name="newMenuItem"  Header="New" Click="newMenuItem_Click" />
-                        <MenuItem Name="copyMenuItem" Header="Copy" Click="copyMenuItem_Click" />
-                        <MenuItem Name="pasteMenuItem"  Header="Paste" Click="pasteMenuItem_Click" />
+						<MenuItem Name="copyMenuItem" Header="Copy" Click="copyMenuItem_Click" />
+						<MenuItem Name="pasteMenuItem"  Header="Paste" Click="pasteMenuItem_Click" />
 						<MenuItem Name="delMenuItem"  Header="Delete" Click="delMenuItem_Click" />
 					</ContextMenu>
 				</TreeView.ContextMenu>
 			</TreeView>
 			<GridSplitter Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="5" />
 			<Canvas />
-        </Grid>
-	</StackPanel>
+		</Grid>
+	</Grid>
 </Window>
