--- a/CSharp/GameEditor/App.xaml
+++ b/CSharp/GameEditor/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="GameEditor.App"
+﻿<Application x:Class="Egametang.App"
 			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			 StartupUri="MainWindow.xaml">
