--- a/CSharp/GameEditor/MainWindow.xaml
+++ b/CSharp/GameEditor/MainWindow.xaml
@@ -1,6 +1,7 @@
-﻿<Window x:Class="GameEditor.MainWindow"
+﻿<Window x:Class="Egametang.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:e="clr-namespace:Egametang"
 		Title="MainWindow" Height="800" Width="1280">
 	<Grid>
 		<Grid.RowDefinitions>
@@ -19,18 +20,7 @@
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
-			<TreeView Grid.Column="0"  HorizontalAlignment="Stretch" Name="behaviorTreeView" 
-					VerticalAlignment="Stretch" Padding="0" BorderThickness="0" 
-					ContextMenuOpening="behaviorTreeView_ContextMenuOpening">
-				<TreeView.ContextMenu>
-					<ContextMenu>
-						<MenuItem Name="newMenuItem"  Header="New" Click="newMenuItem_Click" />
-						<MenuItem Name="copyMenuItem" Header="Copy" Click="copyMenuItem_Click" />
-						<MenuItem Name="pasteMenuItem"  Header="Paste" Click="pasteMenuItem_Click" />
-						<MenuItem Name="delMenuItem"  Header="Delete" Click="delMenuItem_Click" />
-					</ContextMenu>
-				</TreeView.ContextMenu>
-			</TreeView>
+			<e:BehaviorTreeView />
 			<GridSplitter Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="5" />
 			<Canvas />
 		</Grid>
