--- a/CSharp/View/MainWindow.xaml
+++ b/CSharp/View/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Egametang.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:e="clr-namespace:Egametang"
+		xmlns:v="clr-namespace:Egametang"
 		Title="MainWindow" Height="800" Width="1280">
 	<Grid>
 		<Grid.RowDefinitions>
@@ -20,7 +20,7 @@
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition Width="*" />
 			</Grid.ColumnDefinitions>
-			<e:BehaviorTreeView />
+			<v:BehaviorTreeView />
 			<GridSplitter Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Width="5" />
 			<Canvas />
 		</Grid>
