mvvmlight基本结构 1.Model使用IDataService接口取 2.ViewModel使用ViewModelLocator类取

--- a/CSharp/Editor/App.xaml
+++ b/CSharp/Editor/App.xaml
@@ -1,16 +1,15 @@
 ﻿<Application x:Class="Editor.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:vm="clr-namespace:Editor.ViewModel"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             StartupUri="MainWindow.xaml"
-             mc:Ignorable="d">
-    
-    <Application.Resources>
-        <!--Global View Model Locator-->
-        <vm:ViewModelLocator x:Key="Locator"
-                             d:IsDataSource="True" />
-    </Application.Resources>
-    
+		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+		xmlns:vm="clr-namespace:Editor.ViewModel"
+		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+		StartupUri="MainWindow.xaml"
+		mc:Ignorable="d">
+
+	<Application.Resources>
+		<!--Global View Model Locator-->
+		<vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" />
+	</Application.Resources>
+
 </Application>
