--- a/CSharp/Editor/View/MainView.xaml
+++ b/CSharp/Editor/View/MainView.xaml
@@ -5,5 +5,8 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 		mc:Ignorable="d" d:DesignHeight="600" d:DesignWidth="800"
 		DataContext="{Binding Main, Source={StaticResource Locator}}" >
-	<Grid></Grid>
+	<StackPanel>
+		<Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding LoginResult}" />
+		<Button Content="登录" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding LoginCmd}" />
+	</StackPanel>
 </UserControl>
