--- a/CSharp/Editor/MainWindow.xaml
+++ b/CSharp/Editor/MainWindow.xaml
@@ -4,8 +4,7 @@
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:v="clr-namespace:Egametang"
-		mc:Ignorable="d" Height="600" Width="800" Title="MVVM Light Application"
-		DataContext="{Binding Main, Source={StaticResource Locator}}">
+		mc:Ignorable="d" Height="600" Width="800" Title="MVVM Light Application">
 	<Grid x:Name="LayoutRoot">
 		<TabControl HorizontalAlignment="Stretch" VerticalAlignment="Stretch" >
 			<TabItem Header="Main" Name="mainTabItem">
