--- a/CSharp/Editor/View/MainView.xaml
+++ b/CSharp/Editor/View/MainView.xaml
@@ -4,7 +4,7 @@
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 		mc:Ignorable="d" d:DesignHeight="600" d:DesignWidth="800"
-		DataContext="{Binding Main, Source={StaticResource Locator}}" >
+		DataContext="{Binding MainViewModel, Source={StaticResource Locator}}" >
 	<StackPanel>
 		<Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding LoginResult}" />
 		<Button Content="登录" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding LoginCmd}" />
