--- a/CSharp/Editor/View/MainView.xaml
+++ b/CSharp/Editor/View/MainView.xaml
@@ -1,12 +1,21 @@
-﻿<UserControl x:Class="Egametang.MainView"
+﻿<UserControl
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+		xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" xmlns:GalaSoft_MvvmLight_Command="clr-namespace:GalaSoft.MvvmLight.Command;assembly=GalaSoft.MvvmLight.Extras.WPF4" x:Class="Egametang.MainView" 
 		mc:Ignorable="d" d:DesignHeight="600" d:DesignWidth="800"
 		DataContext="{Binding MainViewModel, Source={StaticResource Locator}}" >
-	<StackPanel>
-		<Label HorizontalAlignment="Center" VerticalAlignment="Center" Content="{Binding LoginResult}" />
-		<Button Content="登录" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding LoginCmd}" />
-	</StackPanel>
+	<Grid>		
+		<StackPanel Grid.Column="0">
+			<StackPanel Orientation="Horizontal">
+				<Label Content="用户名: "/>
+				<TextBox Width="150" x:Name="tBUsername" Text="{Binding Username}" />
+				<Label Content="密码: "/>
+				<TextBox Width="150" x:Name="tBPassword" Text="{Binding Password}" />
+				<Button Content="登录" HorizontalAlignment="Center" VerticalAlignment="Center" Command="{Binding LoginCmd}" />
+			</StackPanel>
+			<TextBox x:Name="tBInfo" Margin="10" Padding="1" Height="200" VerticalScrollBarVisibility="Visible" />
+		</StackPanel>
+	</Grid>
 </UserControl>
