--- a/CSharp/Editor/Shell.xaml
+++ b/CSharp/Editor/Shell.xaml
@@ -1,9 +1,10 @@
 ﻿<Window x:Class="Editor.Shell"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:cal="http://www.codeplex.com/CompositeWPF" 
+	xmlns:cal="http://www.codeplex.com/CompositeWPF"
+	xmlns:prism="http://www.codeplex.com/prism"
 	Title="Editor" Height="600" Width="800" WindowStartupLocation="CenterScreen">
 	<Grid>
-		
+		<ItemsControl Name="mainRegion" prism:RegionManager.RegionName="MainRegion"/>
 	</Grid>
 </Window>
