1.ItemsControl换成ContentControl 2.每个类带自己的log成员

--- a/CSharp/Editor/Shell.xaml
+++ b/CSharp/Editor/Shell.xaml
@@ -5,6 +5,8 @@
 	xmlns:prism="http://www.codeplex.com/prism"
 	Title="Editor" Height="600" Width="800" WindowStartupLocation="CenterScreen">
 	<Grid>
-		<ItemsControl Name="mainRegion" prism:RegionManager.RegionName="MainRegion" />
+		<StackPanel>
+			<ContentControl Name="mainRegion" prism:RegionManager.RegionName="MainRegion" />
+		</StackPanel>
 	</Grid>
 </Window>
