--- a/CSharp/Modules/TreeCanvas/TreeCanvasView.xaml
+++ b/CSharp/Modules/TreeCanvas/TreeCanvasView.xaml
@@ -1,11 +1,30 @@
-﻿<UserControl x:Class="Module.TreeCanvas.TreeCanvasView"
+﻿<UserControl
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 		xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+		xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing" x:Class="Module.TreeCanvas.TreeCanvasView" 
 		mc:Ignorable="d" 
-		d:DesignHeight="300" d:DesignWidth="300">
-	<Grid>
+		d:DesignHeight="600" d:DesignWidth="800" xmlns:my="clr-namespace:Controls.BehaviorView;assembly=BehaviorView">
+	<UserControl.Resources>
+		<RoutedUICommand x:Key="Commands.DeleteSelectedNodes" />
+		<RoutedUICommand x:Key="Commands.CreateNode" />
+	</UserControl.Resources>
 
-	</Grid>
+	<UserControl.CommandBindings>
+		<CommandBinding Command="{StaticResource Commands.DeleteSelectedNodes}" Executed="DeleteSelectedNodes_Executed" />
+		<CommandBinding Command="{StaticResource Commands.CreateNode}" Executed="CreateNode_Executed" />
+	</UserControl.CommandBindings>
+
+	<UserControl.ContextMenu>
+		<ContextMenu>
+			<MenuItem Header="Create Node" Command="{StaticResource Commands.CreateNode}" ToolTip="Creates a new node" />
+		</ContextMenu>
+	</UserControl.ContextMenu>
+	
+	<Canvas>
+		<TextBox Canvas.Left="296" Canvas.Top="271" Height="23" Name="textBox1" Width="120" />
+		<my:BehaviorNode Canvas.Left="279" Canvas.Top="151" Content="ListBoxItem" Height="42" Name="behaviorNode1" Width="120" />
+	</Canvas>
+	
 </UserControl>
