增加google protobuf支持,对.proto文件使用自定义工具CmdTool即可自动生成.pb.cs文件 使用方法 1. CmdTool.exe使用前需要在命令行运行CmdTool.exe Register注册 2.CSharp/Tools目录加到环境变量,Protobuf库ProtoGen.exe的目录加到环境变量 3.右键点击项目中的.proto文件,自定义工具使用CmdTool工具

--- a/CSharp/Modules/TreeCanvas/TreeCanvasView.xaml
+++ b/CSharp/Modules/TreeCanvas/TreeCanvasView.xaml
@@ -6,7 +6,7 @@
 		xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing" 
 		xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity" 
 		xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
-		x:Class="Module.TreeCanvas.TreeCanvasView" 
+		x:Class="TreeCanvas.TreeCanvasView" 
 		mc:Ignorable="d" 
 		d:DesignHeight="600" d:DesignWidth="800">
 
