--- a/CSharp/Editor/App.xaml
+++ b/CSharp/Editor/App.xaml
@@ -1,7 +1,4 @@
-﻿<Application x:Class="Editor.App"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-	<Application.Resources>
-
-	</Application.Resources>
+﻿<Application x:Class="Editor.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+	<Application.Resources></Application.Resources>
 </Application>
