--- a/CSharp/Editor/Shell.xaml
+++ b/CSharp/Editor/Shell.xaml
@@ -1,9 +1,7 @@
-﻿<Window x:Class="Editor.Shell"
-		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:cal="http://www.codeplex.com/CompositeWPF"
-		xmlns:prism="http://www.codeplex.com/prism"
-		Title="Editor" Height="800" Width="1280" WindowStartupLocation="CenterScreen">
+﻿<Window x:Class="Editor.Shell" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:cal="http://www.codeplex.com/CompositeWPF"
+        xmlns:prism="http://www.codeplex.com/prism" Title="Editor" Height="800" Width="1280"
+        WindowStartupLocation="CenterScreen">
 	<Grid>
 		<ContentControl Name="treeCanvas" prism:RegionManager.RegionName="TreeCanvasRegion" />
 	</Grid>
