--- a/CSharp/App/Editor/Shell.xaml
+++ b/CSharp/App/Editor/Shell.xaml
@@ -1,5 +1,5 @@
 ﻿<Window x:Class="Editor.Shell" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:cal="http://www.codeplex.com/CompositeWPF"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
         xmlns:prism="http://www.codeplex.com/prism" Title="Editor" Height="800" Width="1280"
         WindowStartupLocation="CenterScreen">
 	<Grid>
